--- a/package.json
+++ b/package.json
@@ -1,7 +1,9 @@
 {
   "name": "safe-objects",
-  "version": "1.0.2",
+  "version": "1.0.3",
   "description": "Safe Object Navigation",
+  "homepage": "https://github.com/dakaraphi/jslib-safe-objects",
+  "repository": "dakaraphi/jslib-safe-objects",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
